Update website: design improvements, blog, game pages

--- a/about.html
+++ b/about.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SilverShard Studios</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
-  <style>
-    body { margin: 0; font-family: 'Inter', sans-serif; background-color: #1c1c1c; color: #e0e0e0; text-align: center; }
-    header { padding: 30px 20px; }
-    header h1 { margin: 0; color: #d0d0d0; font-size: 2.5em; font-weight: 500; }
-    nav { display: flex; justify-content: center; gap: 10px; padding: 20px; }
-    nav a { background-color: #333; color: #ccc; text-decoration: none; padding: 10px 20px; border-radius: 6px; font-weight: 500; transition: background-color 0.2s; }
-    nav a:hover { background-color: #555; }
-    section { padding: 60px 40px; max-width: 1000px; margin: 0 auto; text-align: left; }
-    a { color: #86c5ff; }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us - SilverShard Studios</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <header><h1>About Us</h1></header>
-  <nav><a href="index.html">← Back to Home</a></nav>
-  <section>
-    <p>SilverShard Studios is a small indie game studio founded in Norway with a passion for crafting immersive, visually polished, and mechanically engaging experiences.</p>
-    <p>We’re currently a core team of two developers, combining backgrounds in design, code, art, and sound. We believe in gameplay-first development and use the power of tools like Unreal Engine and AI-assisted workflows to push the boundaries of what a small team can create.</p>
-    <p>Every game we build is rooted in personality, creativity, and the drive to deliver something memorable to our players. We don’t just make games — we build worlds worth visiting.</p>
-  </section>
+  <header>
+    <h1>SilverShard Studios</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="blog.html">Blog</a>
+      <a href="about.html" class="active">About Us</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+<main>
+  <div class="main-content">
+    <section class="info-section about">
+      <h2>About SilverShard Studios</h2>
+      <p>
+        SilverShard Studios is an independent game development studio founded in Norway, dedicated to creating engaging and visually impressive experiences for players worldwide. Our team was brought together by a shared passion for sci-fi, action games, and the endless creative possibilities that game development offers. We believe in making games that challenge, inspire, and entertain – always with a strong focus on gameplay quality and player experience.
+      </p>
+      <p>
+        Since our founding, SilverShard Studios has aimed to stand out by combining strong artistic vision with modern, accessible game design. We draw inspiration from classic arcade titles, story-driven adventures, and everything in between, blending our influences into unique, replayable games for PC and beyond.
+      </p>
+      <p>
+        Our debut project, <b>Void Vanguards</b>, was born out of a desire to bring fast-paced action and sci-fi aesthetics together. As we continue to grow, we are excited to expand our portfolio with new adventures like <b>Coco Island</b> and <b>Stellar Drift</b>. Each game reflects our core values: creativity, player empowerment, and a relentless drive to raise the bar for indie gaming.
+      </p>
+      <p>
+        We are committed to listening to our players, responding to feedback, and building a welcoming community around our games. Whether you’re here for competitive action, relaxing exploration, or something in between, we hope you find a home in the worlds we create.
+      </p>
+      <p>
+        Thank you for supporting SilverShard Studios. The adventure has only just begun!
+      </p>
+    </section>
+    </div>
+  </main>
+  <footer>
+    &copy; 2025 SilverShard Studios. All rights reserved.
+  </footer>
 </body>
 </html>
