--- a/coco-island.html
+++ b/coco-island.html
@@ -1,81 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SilverShard Studios</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #1c1c1c;
-      color: #e0e0e0;
-      text-align: center;
-    }
-    header {
-      padding: 30px 20px;
-    }
-    header h1 {
-      margin: 0;
-      color: #d0d0d0;
-      font-size: 2.5em;
-      font-weight: 500;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      padding: 20px;
-    }
-    nav a {
-      background-color: #333;
-      color: #ccc;
-      text-decoration: none;
-      padding: 10px 20px;
-      border-radius: 6px;
-      font-weight: 500;
-      transition: background-color 0.2s;
-    }
-    nav a:hover {
-      background-color: #555;
-    }
-    section {
-      padding: 60px 40px;
-      max-width: 1000px;
-      margin: 0 auto;
-      text-align: left;
-    }
-    .project img {
-      width: 280px;
-      height: auto;
-      border: 1px solid #444;
-      border-radius: 8px;
-    }
-    a.button-link {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 20px;
-      background-color: #444;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: 500;
-    }
-    a.button-link:hover {
-      background-color: #666;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Coco Island - SilverShard Studios</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <header><h1>Coco Island</h1></header>
-  <nav><a href="index.html">← Back to Home</a></nav>
-  <section>
-    <img src="images/coco_island.jpg" alt="Coco Island" style="max-width: 100%; border-radius: 12px; margin-bottom: 30px;" />
-    <p>Coco Island is a laid-back island puzzle adventure. Solve environmental challenges, uncover hidden stories, and enjoy the peaceful world with charming visuals and cozy atmosphere.</p>
-    <p><strong>Release info and gallery coming soon.</strong></p>
-  </section>
+  <header>
+    <h1>SilverShard Studios</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="blog.html">Blog</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <div class="main-content">
+      <section class="info-section about">
+
+        <h2>Coco Island</h2>
+        <p>
+          <b>Genre:</b> Cozy Adventure & Building<br>
+          <b>Platforms:</b> PC (Steam)
+        </p>
+
+        <p>
+          Welcome to Coco Island – a relaxing adventure game where you can explore tropical beaches, collect treasures, build your own paradise, and make friends with quirky islanders!
+        </p>
+
+        <img src="images/coco_island_1.jpg" alt="Coco Island screenshot" style="width:100%; max-width: 520px; display:block; margin: 36px auto 22px auto; border-radius:14px; box-shadow:0 2px 10px #0002;">
+
+        <p>
+          Discover hidden secrets, gather resources, and unlock decorations to customize your island. Whether you want to fish, farm, decorate, or just relax in the sun, Coco Island is your perfect getaway.
+        </p>
+
+        <img src="images/coco_island_2.jpg" alt="Coco Island features" style="width:100%; max-width: 520px; display:block; margin: 36px auto 22px auto; border-radius:14px; box-shadow:0 2px 10px #0002;">
+
+        <p>
+          <b>Features:</b><br>
+          – Cozy and colorful environments<br>
+          – Building, farming, and decorating<br>
+          – Hidden treasures and secrets<br>
+          – Customizable island life<br>
+        </p>
+
+        <p>
+          <b>Add to your wishlist on Steam and follow our blog for updates!</b>
+        </p>
+      </section>
+    </div>
+  </main>
+  <footer>
+    &copy; 2025 SilverShard Studios. All rights reserved.
+  </footer>
 </body>
 </html>
