--- a/index.html
+++ b/index.html
@@ -1,56 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SilverShard Studios</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
-  <style>
-    body { margin: 0; font-family: 'Inter', sans-serif; background-color: #1c1c1c; color: #e0e0e0; text-align: center; }
-    header { padding: 30px 20px; }
-    header h1 { margin: 0; color: #d0d0d0; font-size: 2.5em; font-weight: 500; }
-    nav { display: flex; justify-content: center; gap: 10px; padding: 20px; }
-    nav a { background-color: #333; color: #ccc; text-decoration: none; padding: 10px 20px; border-radius: 6px; font-weight: 500; transition: background-color 0.2s; }
-    nav a:hover { background-color: #555; }
-    section { padding: 60px 40px; max-width: 1000px; margin: 0 auto; text-align: left; }
-    .project { display: flex; align-items: center; justify-content: flex-start; margin-bottom: 60px; gap: 40px; }
-    .project img { width: 280px; height: auto; border: 1px solid #444; border-radius: 8px; }
-    .project div { flex: 1; max-width: 600px; }
-    .project h3 { margin-top: 0; font-size: 1.4em; color: #f0f0f0; }
-    a.button-link { display: inline-block; margin-top: 10px; padding: 10px 20px; background-color: #444; color: #fff; text-decoration: none; border-radius: 5px; font-weight: 500; }
-    a.button-link:hover { background-color: #666; }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header><h1>SilverShard Studios</h1></header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <section>
-    <h2 style="text-align: center;">Our Projects</h2>
-    <div class="project">
-      <a href="void-vanguards.html"><img src="images/void_vanguards.jpg" alt="Void Vanguards"></a>
-      <div onclick="location.href='void-vanguards.html'">
-        <h3>Void Vanguards</h3>
-        <p>A fast-paced sci-fi action shooter where you battle alien waves on distant planets. Collect gears, upgrade your arsenal, and survive as long as you can.</p>
-      </div>
+  <header>
+    <h1>SilverShard Studios</h1>
+    <nav>
+      <a href="index.html" class="active">Home</a>
+      <a href="blog.html">Blog</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+<main>
+  <div class="main-content">
+    <section class="games">
+
+  <!-- Stellar Drift -->
+  <a class="game-card" href="stellar-drift.html">
+    <img src="images/stellar_drift.jpg" alt="Stellar Drift">
+    <div class="game-info">
+      <h2 class="game-title">Stellar Drift</h2>
+      <p>
+        Stellar Drift is a thrilling space survival and exploration game. Navigate your ship through asteroid fields and cosmic storms, upgrade your vessel and challenge other players. Will be avaliable on Mobile.
+      </p>
     </div>
-    <div class="project">
-      <a href="coco-island.html"><img src="images/coco_island.jpg" alt="Coco Island"></a>
-      <div onclick="location.href='coco-island.html'">
-        <h3>Coco Island</h3>
-        <p>A relaxing and charming island adventure game filled with puzzles, secrets, and quirky characters. Explore at your own pace and discover the island’s mysteries.</p>
-      </div>
+  </a>
+
+  <!-- Void Vanguards -->
+  <a class="game-card" href="void-vanguards.html">
+    <img src="images/void_vanguards.jpg" alt="Void Vanguards">
+    <div class="game-info">
+      <h2 class="game-title">Void Vanguards</h2>
+      <p>
+        Void Vanguards is a fast-paced sci-fi action shooter. Travel between planets, fight endless waves of alien enemies, upgrade and collect new weapons, and see how long you can survive. Available now on Steam!
+      </p>
     </div>
-    <div class="project">
-      <a href="stellar-drift.html"><img src="images/stellar_drift.jpg" alt="Stellar Drift"></a>
-      <div onclick="location.href='stellar-drift.html'">
-        <h3>Stellar Drift</h3>
-        <p>A mobile-friendly multiplayer space survival game. Fly through the galaxy, upgrade your ship, and battle aliens and other players in an idle-friendly cosmic battlefield.</p>
-      </div>
+  </a>
+
+  <!-- Coco Island -->
+  <a class="game-card" href="coco-island.html">
+    <img src="images/coco_island.jpg" alt="Coco Island">
+    <div class="game-info">
+      <h2 class="game-title">Coco Island</h2>
+      <p>
+        Coco Island is a relaxing survival game. Explore the island, gather materials and craft new items that will help you create a raft able to get you off the island.
+      </p>
     </div>
-  </section>
+  </a>
+
+</section>
+
+
+    </section>
+  </div>
+  </main>
+  <footer>
+    &copy; 2025 SilverShard Studios. All rights reserved.
+  </footer>
 </body>
 </html>
