--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>SilverShard Studios</h1>
+    <a href="index.html">
+      <img src="images/logo.png" alt="Silvershard Studios Logo" style="height:120px;">
+    </a>
     <nav>
       <a href="index.html">Home</a>
       <a href="blog.html">Blog</a>
@@ -21,20 +23,15 @@
     <section class="info-section about">
       <h2>About SilverShard Studios</h2>
       <p>
-        SilverShard Studios is an independent game development studio founded in Norway, dedicated to creating engaging and visually impressive experiences for players worldwide. Our team was brought together by a shared passion for sci-fi, action games, and the endless creative possibilities that game development offers. We believe in making games that challenge, inspire, and entertain – always with a strong focus on gameplay quality and player experience.
+        Silvershard Studios is an independent game development team based in Norway. Our goal is to create engaging and accessible games with a focus on strong visuals, enjoyable gameplay, and lasting replay value.
       </p>
       <p>
-        Since our founding, SilverShard Studios has aimed to stand out by combining strong artistic vision with modern, accessible game design. We draw inspiration from classic arcade titles, story-driven adventures, and everything in between, blending our influences into unique, replayable games for PC and beyond.
+        We are a small, dedicated group of two with a passion for sci-fi, action, and exploration games. Our projects are driven by feedback from our community, and we believe in continuous improvement through open testing and iteration.
+      <p>
+        Currently, we are working on several projects, including both PC and mobile titles. We value transparent communication and aim to keep our players updated throughout the development process.
       </p>
       <p>
-        Our debut project, <b>Void Vanguards</b>, was born out of a desire to bring fast-paced action and sci-fi aesthetics together. As we continue to grow, we are excited to expand our portfolio with new adventures like <b>Coco Island</b> and <b>Stellar Drift</b>. Each game reflects our core values: creativity, player empowerment, and a relentless drive to raise the bar for indie gaming.
-      </p>
-      <p>
-        We are committed to listening to our players, responding to feedback, and building a welcoming community around our games. Whether you’re here for competitive action, relaxing exploration, or something in between, we hope you find a home in the worlds we create.
-      </p>
-      <p>
-        Thank you for supporting SilverShard Studios. The adventure has only just begun!
-      </p>
+        Thank you for following our journey.
     </section>
     </div>
   </main>
