--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>SilverShard Studios</h1>
+    <a href="index.html">
+      <img src="images/logo.png" alt="Silvershard Studios Logo" style="height:120px;">
+    </a>
     <nav>
       <a href="index.html">Home</a>
       <a href="blog.html" class="active">Blog</a>
@@ -34,9 +36,16 @@
           <h2 class="blog-title">Void Vanguards released on Steam!</h2>
           <span class="blog-date">01.05.2025</span>
         </div>
-        <p>
-          We’re proud to announce that Void Vanguards is now available on Steam! After months of development, testing, and invaluable feedback from our community, everyone can finally explore planets, battle waves of enemies, and collect new weapons and upgrades. Thank you all for your support and input along the way—this is only the beginning of the journey!
-        </p>
+        <p>We’re proud to announce that Void Vanguards is now available on Steam! After months of development, testing, and invaluable feedback from our community, everyone can finally explore planets, battle waves of enemies, and collect new weapons and upgrades. Thank you all for your support and input along the way—this is only the beginning of the journey!</p>
+      </div>
+
+      <div class="blog-card">
+        <div class="blog-header">
+          <h2 class="blog-title">Void Vanguards first Beta Test.</h2>
+          <span class="blog-date">17.10.2024</span>
+        </div>
+        <p>The first beta test has now been completed.</p>
+        <p>We appreciate everyone who participated, tested the game, reported bugs, and provided feedback. The input we received has helped us identify several areas for improvement in gameplay, balance, and user interface.</p>
       </div>
 
       <div class="blog-card">
@@ -44,9 +53,7 @@
           <h2 class="blog-title">Silvershard Studios is Founded.</h2>
           <span class="blog-date">24.03.2024</span>
         </div>
-        <p>
-          This is where Silvershard Studios was founded by Sebastian Pettersen and Kevin Engelsjord.
-        </p>
+        <p>This is where Silvershard Studios was founded by Sebastian Pettersen and Kevin Engelsjord.</p>
       </div>
 
     </section>
