--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>SilverShard Studios</h1>
+    <a href="index.html">
+      <img src="images/logo.png" alt="Silvershard Studios Logo" style="height:120px;">
+    </a>
     <nav>
       <a href="index.html">Home</a>
       <a href="blog.html">Blog</a>
@@ -24,11 +26,8 @@
         We’d love to hear from you! If you have questions, feedback, partnership ideas, or want to get in touch with our team, feel free to reach out.
       </p>
       <p>
-        <b>Email:</b><br>
+        <b>Email:</b>
         <a href="mailto:contact@silvershardstudios.com" style="color:#3fa7ff;">contact@silvershardstudios.com</a>
-      </p>
-      <p>
-        You’re also welcome to join our community on <a href="https://discord.gg/xxxx" style="color:#3fa7ff;" target="_blank">Discord</a> for the latest updates, discussions, and support.
       </p>
       <p>
         We aim to reply as quickly as possible!
