--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>SilverShard Studios</h1>
+    <a href="index.html">
+      <img src="images/logo.png" alt="Silvershard Studios Logo" style="height:120px;">
+    </a>
     <nav>
       <a href="index.html" class="active">Home</a>
       <a href="blog.html">Blog</a>
@@ -22,7 +24,7 @@
 
   <!-- Stellar Drift -->
   <a class="game-card" href="stellar-drift.html">
-    <img src="images/stellar_drift.jpg" alt="Stellar Drift">
+    <img src="images/stellar_drift.png" alt="Stellar Drift">
     <div class="game-info">
       <h2 class="game-title">Stellar Drift</h2>
       <p>
