--- a/coco-island.html
+++ b/coco-island.html
@@ -25,34 +25,15 @@
         <h2>Coco Island</h2>
         <p>
           <b>Genre:</b> Cozy Adventure & Building<br>
-          <b>Platforms:</b> PC (Steam)
+          <b>Platforms:</b> PC
         </p>
+        <p>Coco Island is a light survival game where you explore a tropical island after being stranded. </p>
+        <img src="images/coco_island_1.jpg" alt="Coco Island screenshot">
+        <p>Collect sticks, leaves, and other materials to craft useful items and build a raft that can take you off the island.</p>
+        <img src="images/coco_island_2.jpg" alt="Coco Island screenshot">
+        <p>The island also holds hidden treasures – including rare armor pieces waiting to be found.</p>
+        <img src="images/coco_island_3.jpg" alt="Coco Island screenshot">
 
-        <p>
-          Welcome to Coco Island – a relaxing adventure game where you can explore tropical beaches, collect treasures, build your own paradise, and make friends with quirky islanders!
-        </p>
-
-        <img src="images/coco_island_1.jpg" alt="Coco Island screenshot" style="width:100%; max-width: 520px; display:block; margin: 36px auto 22px auto; border-radius:14px; box-shadow:0 2px 10px #0002;">
-
-        <p>
-          Discover hidden secrets, gather resources, and unlock decorations to customize your island. Whether you want to fish, farm, decorate, or just relax in the sun, Coco Island is your perfect getaway.
-        </p>
-
-        <img src="images/coco_island_2.jpg" alt="Coco Island features" style="width:100%; max-width: 520px; display:block; margin: 36px auto 22px auto; border-radius:14px; box-shadow:0 2px 10px #0002;">
-
-        <img src="images/coco_island_3.jpg" alt="Coco Island features" style="width:100%; max-width: 520px; display:block; margin: 36px auto 22px auto; border-radius:14px; box-shadow:0 2px 10px #0002;">
-
-        <p>
-          <b>Features:</b><br>
-          – Cozy and colorful environments<br>
-          – Building, farming, and decorating<br>
-          – Hidden treasures and secrets<br>
-          – Customizable island life<br>
-        </p>
-
-        <p>
-          <b>Add to your wishlist on Steam and follow our blog for updates!</b>
-        </p>
       </section>
     </div>
   </main>
