--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="game-info">
       <h2 class="game-title">Stellar Drift</h2>
       <p>
-        Stellar Drift is a thrilling space survival and exploration game. Navigate your ship through asteroid fields and cosmic storms, upgrade your vessel and challenge other players. Will be avaliable on Mobile.
+        Stellar Drift is a mobile, multiplayer space survival game where you drift through the galaxy, fight enemies, encounter real players, and risk everything. Play actively for high rewards - or drift AFK at your own peril.
       </p>
     </div>
   </a>
