--- a/stellar-drift.html
+++ b/stellar-drift.html
@@ -24,33 +24,16 @@
 
         <h2>Stellar Drift</h2>
         <p>
-          <b>Genre:</b> Space survival & exploration<br>
-          <b>Platforms:</b> PC (Steam)
+          <b>Genre:</b> Space survival<br>
+          <b>Platforms:</b> Mobile (iOS and Android)
         </p>
+        <p>Stellar Drift is a multiplayer space survival game where you drift through the galaxy, fight enemies, encounter real players, and risk everything.</p>
+        <p>Play actively to collect more <em>gears</em> and score, or stay AFK and drift – but beware: enemies are everywhere, and death means losing everything. </p>
+        <p>Return safely to upgrade your ship’s speed, damage, or defense, and climb the leaderboards.</p>
+        <img src="images/stellar_drift_1.png" alt="Stellar Drift gameplay">
 
-        <p>
-          Stellar Drift is a thrilling space survival and exploration game where you pilot your ship through dangerous asteroid fields, mysterious cosmic storms, and discover lost outposts. Upgrade your vessel, gather resources, and see how far you can drift among the stars!
-        </p>
+        <p>Stellar Drift is in early development. Estimated release mid 2027.</p>
 
-        <img src="images/stellar_drift_1.jpg" alt="Stellar Drift gameplay" style="width:100%; max-width: 520px; display:block; margin: 36px auto 22px auto; border-radius:14px; box-shadow:0 2px 10px #0002;">
-
-        <p>
-          Every journey in Stellar Drift is unique, with procedurally generated space environments and a variety of challenges. 
-        </p>
-
-        <img src="images/stellar_drift_2.jpg" alt="Stellar Drift upgrades" style="width:100%; max-width: 520px; display:block; margin: 36px auto 22px auto; border-radius:14px; box-shadow:0 2px 10px #0002;">
-
-        <p>
-          <b>Features:</b><br>
-          – Dynamic space environments<br>
-          – Deep upgrade system<br>
-          – Atmospheric soundtrack<br>
-          – Leaderboards and achievements<br>
-        </p>
-
-        <p>
-          <b>Wishlist on Steam or follow our dev blog for updates!</b>
-        </p>
       </section>
     </div>
   </main>
