--- a/void-vanguards.html
+++ b/void-vanguards.html
@@ -27,38 +27,13 @@
           <b>Genre:</b> Sci-fi Action Shooter<br>
           <b>Platforms:</b> PC (Steam)
         </p>
+        <p>We’re proud to announce that Void Vanguards is now available on Steam! After months of development, testing, and invaluable feedback from our community, everyone can finally explore planets, battle waves of enemies, and collect new weapons and upgrades. Thank you all for your support and input along the way!</p>
 
-        <p>
-          Step into the Void and prove your skills! Void Vanguards is a fast-paced sci-fi action shooter where you travel between mysterious planets, battling waves of relentless alien enemies and upgrading your arsenal with powerful weapons and abilities.
-        </p>
-
-        <img src="images/void_vanguards_1.jpg" alt="Void Vanguards gameplay" style="width:100%; max-width: 520px; display:block; margin: 36px auto 22px auto; border-radius:14px; box-shadow:0 2px 10px #0002;">
-
-        <p>
-          Survive as long as you can, unlock new gear, and climb the global leaderboards. With high-quality visuals and tight controls, Void Vanguards is a test of reflexes and strategy for any action fan!
-        </p>
-
-        <img src="images/void_vanguards_2.jpg" alt="Void Vanguards weapons" style="width:100%; max-width: 520px; display:block; margin: 36px auto 22px auto; border-radius:14px; box-shadow:0 2px 10px #0002;">
-
-        <p>
-          <b>Features:</b><br>
-          – 3 playable planets<br>
-          – Endless arena mode<br>
-          – 10+ upgradable weapons<br>
-          – Dozens of enemy types<br>
-          – Steam leaderboards and achievements<br>
-        </p>
-
-        <p>
-          We’re proud to announce that Void Vanguards is now available on Steam! After months of development, testing, and invaluable feedback from our community, everyone can finally explore planets, battle waves of enemies, and collect new weapons and upgrades. Thank you all for your support and input along the way—this is only the beginning of the journey!
-        </p>
-
-<div class="game-buttons">
-  <a href="https://store.steampowered.com/app/2824240/Void_Vanguards/" target="_blank" class="action-btn">View on Steam</a>
-  <a href="https://discord.gg/cXQZvmF8Cw" target="_blank" class="action-btn">Join Discord</a>
-</div>
-
-
+    <div class="game-buttons">
+      <a href="https://store.steampowered.com/app/2824240/Void_Vanguards/" target="_blank" class="action-btn">View on Steam</a>
+      <a href="https://discord.gg/cXQZvmF8Cw" target="_blank" class="action-btn">Join Discord</a>
+    </div>
+    
       </section>
     </div>
   </main>
