--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,21 @@
     <section class="info-section about">
       <h2>Contact Us</h2>
       <p>
-        We’d love to hear from you! If you have questions, feedback, partnership ideas, or want to get in touch with our team, feel free to reach out.
+        We’d love to hear from you! If you have questions, feedback, or want to get in touch with our team, feel free to reach out.
       </p>
       <p>
         <b>Email:</b>
-        <a href="mailto:contact@silvershardstudios.com" style="color:#3fa7ff;">contact@silvershardstudios.com</a>
+        <a href="mailto:contact@silvershardstudio.com" style="color:#3fa7ff;">contact@silvershardstudio.com</a>
       </p>
+      <br>
+      <p>
+        Do you have any ideas regarding partnership or business, please contact us here.
+      </p>
+      <p>
+        <b>Email:</b>
+        <a href="mailto:partners@silvershardstudio.com" style="color:#3fa7ff;">partnerst@silvershardstudio.com</a>
+      </p>
+      <br>
       <p>
         We aim to reply as quickly as possible!
       </p>
