--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
       </p>
       <p>
         <b>Email:</b>
-        <a href="mailto:partners@silvershardstudio.com" style="color:#3fa7ff;">partnerst@silvershardstudio.com</a>
+        <a href="mailto:partners@silvershardstudio.com" style="color:#3fa7ff;">partners@silvershardstudio.com</a>
       </p>
       <br>
       <p>
