Add README with test instructions

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       </p>
       <br>
       <p>
-        Do you have any ideas regarding partnership or business, please contact us here.
+        If you have any ideas regarding partnerships or business, please contact us here.
       </p>
       <p>
         <b>Email:</b>
